# bukubrow-webext

./: .editorconfig  .eslintrc  .eslintrc.js  .gitignore  .parcelrc  .prettierignore  .prettierrc.toml  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  README.md  azure-pipelines.yml  jest.config.js  makefile  package.json  packages.dhall  spago.dhall  tsconfig.json  webpack.config.js
.build/: azure-pipelines-template.yml
.ci/: azure-pipelines-template.yml
binary/: Cargo.toml  bukubrow.go  install.sh
binary/browser-hosts/: chrome.json  firefox.json
binary/src/: buku.rs  cli.rs  config.rs  database.rs  main.rs  server.rs  utils.rs
binary/src/hosts/: chrome.rs  firefox.rs  installer.rs  mod.rs  paths.rs
entry/: backend.js  content.html  content.js  manifest.json  options.html  options.js  style.css
src/: AppM.purs  Bookmark.purs  Bookmarklet.purs  Buku.purs  Bukubrow.purs  Command.js  Command.purs  Config.purs  Css.js  Css.purs  Env.purs  Foreign.purs  Friendly.purs  Html.purs  LocalStorage.js  LocalStorage.purs  NativeMessaging.js  NativeMessaging.purs  Popup.js  Popup.purs  Result.purs  Scroll.js  Scroll.purs  Search.purs  Settings.purs  SyncStorage.js  SyncStorage.purs  Tab.js  Tab.purs  Tag.purs  Types.purs  URLMatch.purs  Url.js  Url.purs  Uuid.js  Uuid.purs  Version.purs  Webext.js  Webext.purs  backend.ts  (+8 more)
static/: manifest.json
test/: Bookmark.purs  Bookmarklet.purs  Css.purs  Main.purs  NativeMessaging.purs  Search.purs  Tab.purs  Tag.purs  TestUtils.purs  URLMatch.purs  Url.purs  Version.purs
webextension/: .babelrc  .eslintrc  backend.js  frontend.js  (+14 more)
(+364 files in other folders)
