[package]
name = "bukubrow"
version = "1.2.1"
authors = ["Sam A. Horvath-Hunt"]
edition = "2018"

[[bin]]
name = "bukubrow"

[dependencies]
chrome_native_messaging = "0.1"
clap = "2.33"
dirs = "1.0"
os_info = "1.1"
rusqlite = { version = "0.17", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
